# retrievalci

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: publish.yml  retrievalci-ci.yml  searchtrace-ci.yml
baselines/rag/: bench_v0_hosted_only.json  bench_v0_merged.json  smoke.json
docs/: ARCHITECTURE.md  CI.md
docs/rag_eval/: DIAGNOSTICS_DESIGN.md  README.md  RESEARCH_EXPANSION.md  STATUS.md
docs/rag_eval/results/: hosted-rag-benchmark-plan.md
docs/trace_eval/: README.md  SCHEMA.md
examples/: README.md  corpus.demo.jsonl  otel.spans.demo.json  retrievalci.ci.yaml  retrievalci.project.yaml  searchtrace.ci.yaml  searchtrace.project.yaml  spans.demo.jsonl  traces.demo.jsonl
examples/rag_eval/: questions.jsonl  smoke.yaml
examples/rag_eval/bench_v0/: LICENSE  UPSTREAM.md  ablation_distill_cost.yaml  baseline.yaml  baseline_claude.yaml  baseline_gemini.yaml  baseline_gpu.yaml  baseline_vertex.yaml  questions.jsonl  smoke.yaml
examples/rag_eval/corpus/: billing.md  escalation.md  integrations.md  onboarding.md  retrieval.md  security.md  support.md
retrievalci/: __init__.py  cli.py  project.py  report_assets.py  reporting.py  trace_adapters.py  trace_eval.py
retrievalci/rag_eval/: corpus.py  diagnostics.py  hosted.py  metrics.py  regression.py  runner.py  types.py
retrievalci/rag_eval/backends/: __init__.py  base.py  claude.py  gemini.py  groq.py  local.py  mock.py  openai.py  vertex.py
retrievalci/rag_eval/claims/: __init__.py  acl.py  bq_mapping.py  builds.py  types.py
retrievalci/rag_eval/extraction/: __init__.py
retrievalci/rag_eval/predicates/: __init__.py
retrievalci/rag_eval/schemas/: predicates.yml
retrievalci/rag_eval/systems/: __init__.py  azure_ai_search.py  base.py  bedrock_kb.py  bm25.py  chunk_summary_rag.py  claim_rag.py  dense_rag_termpad.py  hybrid_rag.py  openai_file_search.py  rag.py  rerank_rag.py  vertex_ai_rag.py  wiki_pages.py
retrievalci/runs/: __init__.py  execute.py  registry.py  types.py
scripts/: create_rag_research_study.py  import_third_party_examples.py  run_bench_v0_azure.py  run_bench_v0_bedrock.py  run_bench_v0_openai.py  run_bench_v0_vertex.py
searchtrace/: __init__.py  cli.py  project.py  report_assets.py  reporting.py  trace_adapters.py  trace_eval.py  trace_retrievers.py
searchtrace/rag_eval/: __init__.py  corpus.py  diagnostics.py  metrics.py  regression.py  runner.py  types.py
searchtrace/rag_eval/backends/: __init__.py  claude.py  gemini.py  groq.py  mock.py  (+1 more)
searchtrace/runs/: __init__.py  execute.py  registry.py  types.py
tests/: conftest.py  test_project.py  test_reporting.py  test_runs.py
tests/rag_eval/: test_diagnostics.py  test_distill_ablation.py  test_hosted.py  test_hosted_adapters.py  test_regression.py  test_rejudge.py  test_research_study.py  test_runner_config.py  test_scorecard.py  test_smoke.py  test_third_party_examples.py
tests/trace_eval/: test_trace_adapters.py  test_trace_eval.py  test_trace_retrievers.py
(+99 files in other folders)
